The formats of read and draw framebuffers should be identical according to spec. This CL enforces this by using one validation texture for each format other than all formats.

BUG=645043
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel;master.tryserver.chromium.android:android_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2328463002
Cr-Commit-Position: refs/heads/master@{#417831}

Former-commit-id: 361419c87294053f0fd1701431053d19253710e5